# RustRowingMachine

./: Cargo.toml  README.md  Readme.md  avr-atmega328p.json  rpi_build.sh  rpi_run.sh  rust-toolchain.toml
.cargo/: config
