[package]
name = "rowing_machine_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
half = "1.8.2"
spidev = "0.5.1"

[dependencies.arduino-hal]
path = "../avr-hal/arduino-hal"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
